GenericSetup Product Changelog
==============================

GenericSetup 1.5.0 (unreleased)
-------------------------------

- UpgradeSteps: Improved listUpgradeSteps behavior.
  If versions and checker are specified for a step, the checker is used as an
  additional restriction.

- Don't fail when a sub-item cannot be adapted after creation when
  importing a folder.  (https://bugs.launchpad.net/zope-cmf/+bug/300315)

- Avoid even an explicit purge of the rolemap if no XML file is present
  in a given context.  (https://bugs.launchpad.net/zope-cmf/+bug/279294)

- Component registry import: Add the ability to unregister a component
  by specifying the "remove" attribute inside a utility node.
  (https://bugs.launchpad.net/zope-cmf/+bug/161728)

- Property import/export tests: Add testing for non-ASCII properties.
  (https://bugs.launchpad.net/zope-cmf/+bug/202356)
  (https://bugs.launchpad.net/zope-cmf/+bug/242588)

- Add 'IChunkedImportContext' interface, allowing RAM-efficient chunked
  reads of large files, and implement for 'DirectoryImportContext'.
  (https://bugs.launchpad.net/zope-cmf/+bug/259233)

- Add <genericsetup:upgradeDepends> ZCML tag; defines a specialized upgrade
  step that re-applies one or more import steps from the GS profile during
  an upgrade process

- Add 'IChunkedExportContext' interface, allowing RAM-efficient chunked
  writes of large files, and implement for 'DirectoryExportContext'.
  (https://bugs.launchpad.net/zope-cmf/+bug/257365)

- Provide default for dependencies when processing metadata.xml, to
  avoid a KeyError.
  (https://bugs.launchpad.net/zope-cmf/+bug/255301)

- Handle utility factories cleanly if zope.component >=3.5.0 is used.
 
- tool and utils: Removed deprecated code.

- Update PropertyManagerHelpers to make it possible to remove elements from a
  property by adding a remove="True" attribute to the element. This can
  also be used to reorder elements since new elements are always added
  at the end of the list.
